--- a/Education Tab.html
+++ b/Education Tab.html
@@ -22,7 +22,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="Portfólio.html">About me</a>
+                <a class="nav-link" href="index.html">About me</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="My Projects.html">Education</a>
